@@ -3,11 +3,8 @@
   <record id="1" aka="AAAAAAAAAAE=">
     <pickle>
       <tuple>
-        <tuple>
-          <string>Products.PageTemplates.ZopePageTemplate</string>
-          <string>ZopePageTemplate</string>
-        </tuple>
-        <none/>
+        <global name="ZopePageTemplate" module="Products.PageTemplates.ZopePageTemplate"/>
+        <tuple/>
       </tuple>
     </pickle>
     <pickle>
@@ -53,7 +50,7 @@
     <div class="title" i18n:translate="" i18n:domain="ui">Wiki successors</div>\n
     <ul>\n
       <li tal:repeat="doc doc_list">\n
-        <a tal:content="doc/title" tal:attributes="href python:doc.absolute_url()+\'/view\'"/>\n
+        <a tal:content="doc/getTitleOrId" tal:attributes="href python:doc.absolute_url()+\'/view\'"/>\n
       </li>\n
     </ul>\n
   </div>\n
@@ -63,7 +60,7 @@
     <div class="title" i18n:translate="" i18n:domain="ui">Wiki predecessors</div>\n
     <ul tal:define="doc_list python:here.Document_getRelatedDocumentList(relation_id=\'wiki_predecessor\')">\n
       <li tal:repeat="doc doc_list">\n
-        <a tal:content="doc/title" tal:attributes="href python:doc.absolute_url()+\'/view\'"/>\n
+        <a tal:content="doc/getTitleOrId" tal:attributes="href python:doc.absolute_url()+\'/view\'"/>\n
       </li>\n
     </ul>\n
   </div>\n
@@ -72,8 +69,20 @@
 ]]></string> </value>
         </item>
         <item>
+            <key> <string>content_type</string> </key>
+            <value> <string>text/html</string> </value>
+        </item>
+        <item>
+            <key> <string>expand</string> </key>
+            <value> <int>0</int> </value>
+        </item>
+        <item>
             <key> <string>id</string> </key>
             <value> <string>Document_viewImplicitRelationListWidget</string> </value>
+        </item>
+        <item>
+            <key> <string>title</string> </key>
+            <value> <string></string> </value>
         </item>
       </dictionary>
     </pickle>
